# BioFlow-CLI

./: .gitignore  BioFlow-CLI-0.2.1.tar.gz.sha256  CHANGELOG_v0.2.1.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  generate_checksum.sh  install.sh  install.sh.sha256  pyproject.toml  requirements.txt
bioflow/: __init__.py  alignment.py  bio_tasks.py  cli.py  config.py  env_manager.py  i18n.py  main.py  pipeline.py  preflight.py  report.py  run_layout.py  search.py
bioflow/locales/: __init__.py  en.py  zh.py
examples/: align.yml  qc.yml  search.yml
tests/: test_batch.py  test_cli.py  test_core.py  test_qc.py  test_workflows.py
