[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioflow-cli"
version = "0.1.0"
description = "A professional bioinformatics TUI workflow tool with i18n support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
bioflow = "bioflow.main:main"

[project.urls]
Homepage = "https://github.com/woshinidad88/BioFlow-CLI"
